--- a/css/index.css
+++ b/css/index.css
@@ -175,3 +175,10 @@ header {
                 margin-top: 20px; 
                 margin-left: 70px; 
                 }
+
+                /* image styling */ 
+.header-img {
+    /* top and bottom margin to create space between the image and the nav and content */ 
+    margin-top: 30px;  
+    margin-bottom: 30px; 
+    }
