--- a/css/index.css
+++ b/css/index.css
@@ -101,10 +101,11 @@ p {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+/* Changing this to .boxes div for more color flexibility */ 
+.middle-content .boxes div {
     width: 12.5%;
     height: 100px;
-    background: black;
+    /* removing background: black to add unique styling in each class*/
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -182,3 +183,47 @@ header {
     margin-top: 30px;  
     margin-bottom: 30px; 
     }
+
+/* Adding color to the boxes */ 
+/* I already have a boxes class wrapping around all my boxes, and one class for a box item. */ 
+/* To add unique colors, I'm going to change the set style to .boxes div instead of .boxes .box, then give each box a number and class*/ 
+
+.middle-content .box1 {
+    background-color: teal; 
+}
+
+.middle-content .box2 {
+    background-color: gold; 
+}
+
+.middle-content .box3 {
+    background-color: cadetblue; 
+}
+
+.middle-content .box4 {
+    background-color: coral; 
+}
+
+.middle-content .box5 {
+    background-color: crimson; 
+}
+
+.middle-content .box6 {
+    background-color: forestgreen; 
+}
+
+.middle-content .box7 {
+    background-color: darkorchid; 
+}
+
+.middle-content .box8 {
+    background-color: hotpink; 
+}
+
+.middle-content .box9 {
+    background-color: indigo; 
+}
+
+.middle-content .box10 {
+    background-color: dodgerblue; 
+}
