--- a/css/index.css
+++ b/css/index.css
@@ -227,3 +227,12 @@ header {
 .middle-content .box10 {
     background-color: dodgerblue; 
 }
+
+/* Changes the container text at the top of the page (does not match .top-content exactly from index.html */
+.about-top-text{
+    flex-wrap: nowrap;
+    padding-bottom: 20px;  
+    padding-right: 20px; 
+    padding-left: 20px; 
+    padding-top: 0px; 
+}
