--- a/css/index.css
+++ b/css/index.css
@@ -259,10 +259,12 @@ header {
 .about-box button { 
     border: 2px solid black;
     border-radius: 10px; 
+    /* No bottom padding because this is how I'm centering my text*/
     padding-top: 10px; 
     padding-right: 20px; 
     padding-left: 20px; 
     margin-top: 10px;  
+
 }
 
 .about-bottom-content {
