--- a/css/index.css
+++ b/css/index.css
@@ -270,3 +270,26 @@ header {
 .about-bottom-content {
     margin: 30px; 
 }
+
+/* Product page CSS */
+
+.product-content {
+    display: flex; 
+    flex-wrap: wrap; 
+}
+    .product-content .product-box {
+        display: flex; 
+        width: 100%; 
+        padding: 20px; 
+        border-bottom: 1px dashed black;
+    }
+
+        .product-box .product-text {
+            width: 50%; 
+        }
+
+        .product-box .product-img {
+            margin-right: 20px;
+            margin-left: 20px; 
+            
+        }
